--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
  "background_color": "#fff",
  "display": "standalone",
  "theme_color": "#fff",
+   "start_url": "/?homescreen=1",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#2196F3",
+  "theme_color": "#2196F3"
     
   "short_name": "TicTacToe",
   "name": "Aunderwince TicTacToe",
@@ -31,5 +36,4 @@
   ],
     
   "start_url": "index.html?launcher=true"
- 
 }
