--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
- "manifest_version": 2,
  "background_color": "#1474B3",
  "display": "standalone",
  "theme_color": "#1474B3",
- "orientation": "portrait"
+ "orientation": "portrait",
  "scope": "/",
  
   "short_name": "TicTacToe",
